--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
             <h1 class="title is-1 publication-title">HarmonyView: Harmonizing Consistency and Diversity in One-Image-to-3D</h1>
             <div class="is-size-4 publication-authors">
               <span class="author-block" style="color:#f68946;font-weight:normal;">
-                <a href="https://byeongjun-park.github.io//">Byeongjun Park<sup>*</sup></a>,
+                <a href="https://byeongjun-park.github.io//" style="color:#f68946;font-weight:normal;">Byeongjun Park<sup>*</sup></a>,
               </span>
               <span class="author-block" style="color:#f68946;font-weight:normal;">
-                <a href="https://sangminwoo.github.io/">Sangmin Woo<sup>*</sup></a>,
+                <a href="https://sangminwoo.github.io/" style="color:#f68946;font-weight:normal;">Sangmin Woo<sup>*</sup></a>,
               </span>
               <span class="author-block" style="color:#008AD7; font-weight:normal;">
                 Hyojun Go
@@ -127,8 +127,8 @@
               <span class="author-block" style="color:#008AD7;font-weight:normal;">
                 Jin-Young Kim,
               </span>
-              <span class="author-block">
-                <a style="color:#f68946;font-weight:normal;">Changick Kim</a>,
+              <span class="author-block" style="color:#f68946;font-weight:normal;">
+                Changick Kim,
               </span>
             </div>
 
