--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 Jin-Young Kim,
               </span>
               <span class="author-block" style="color:#f68946;font-weight:normal;">
-                Changick Kim<sup>#8224;</sup>
+                Changick Kim<sup>&#8224;</sup>
               </span>
             </div>
 
@@ -139,7 +139,7 @@
 
             <div class="is-size-5 publication-authors">
               <span class="author-block"><sup>*</sup>Equal Contribution</span>
-              <span class="author-block"><sup>#8224;</sup>Corresponding Author</span>
+              <span class="author-block"><sup>&#8224;</sup>Corresponding Author</span>
             </div>
 
             <div class="column has-text-centered">
