--- a/index.html
+++ b/index.html
@@ -115,19 +115,19 @@
           <div class="column has-text-centered">
             <h1 class="title is-1 publication-title">HarmonyView: Harmonizing Consistency and Diversity in One-Image-to-3D</h1>
             <div class="is-size-4 publication-authors">
-              <span class="author-block" style="color:#f68946;font-weight:normal;">
-                <a href="https://byeongjun-park.github.io/" style="color:#f68946;font-weight:normal;">Byeongjun Park<sup>*</sup></a>,
+              <span class="author-block">
+                <a href="https://byeongjun-park.github.io/"><b style="color:#f68946; font-weight:normal">Byeongjun Park <sup>*</sup>,</b></a>
               </span>
-              <span class="author-block" style="color:#f68946;font-weight:normal;">
+              <span class="author-block">
                 <a href="https://sangminwoo.github.io/" style="color:#f68946;font-weight:normal;">Sangmin Woo<sup>*</sup></a>,
               </span>
-              <span class="author-block" style="color:#008AD7; font-weight:normal;">
+              <span class="author-block">
                 Hyojun Go,
               </span>
-              <span class="author-block" style="color:#008AD7;font-weight:normal;">
+              <span class="author-block">
                 Jin-Young Kim,
               </span>
-              <span class="author-block" style="color:#f68946;font-weight:normal;">
+              <span class="author-block">
                 Changick Kim<sup>&#8224;</sup>
               </span>
             </div>
