--- a/index.html
+++ b/index.html
@@ -116,16 +116,16 @@
             <h1 class="title is-1 publication-title">HarmonyView: Harmonizing Consistency and Diversity in One-Image-to-3D</h1>
             <div class="is-size-4 publication-authors">
               <span class="author-block">
-                <a href="https://byeongjun-park.github.io/" style="color:#f68946; font-weight:normal"><b style="color:#f68946; font-weight:normal">Byeongjun Park <sup>*</sup>,</b></a>
+                <a href="https://byeongjun-park.github.io/"><b style="color:#f68946; font-weight:normal">Byeongjun Park <sup>*</sup>,</b></a>
               </span>
               <span class="author-block">
-                <a href="https://sangminwoo.github.io/" style="color:#f68946; font-weight:normal"><b style="color:#f68946; font-weight:normal">Sangmin Woo <sup>*</sup>,</b></a>
+                <a href="https://sangminwoo.github.io/"><b style="color:#f68946; font-weight:normal">Sangmin Woo <sup>*</sup>,</b></a>
               </span>
               <span class="author-block">
-                Hyojun Go,
+                <b style="color:#008AD7; font-weight:normal">Hyojun Go<sup>*</sup>,</b>
               </span>
               <span class="author-block">
-                Jin-Young Kim,
+                <b style="color:#008AD7; font-weight:normal">Jin-Young Kim<sup>*</sup>,</b>
               </span>
               <span class="author-block">
                 Changick Kim<sup>&#8224;</sup>
