--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <b style="color:#008AD7; font-weight:normal">Jin-Young Kim<sup>*</sup>,</b>
               </span>
               <span class="author-block">
-                Changick Kim<sup>&#8224;</sup>
+                <b style="color:#f68946; font-weight:normal">Changick Kim<sup>&#8224;</sup></b>
               </span>
             </div>
 
