--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             </div>
 
             <div class="is-size-4 publication-authors">
-              <span class="author-block"><b style="color:#f68946; font-weight:normal">&#x25B6 </b> KAIST</span>
+              <span class="author-block"><b style="color:#f68946; font-weight:normal">&#x25B6 </b> KAIST EE</span>
               <span class="author-block"><b style="color:#008AD7; font-weight:normal">&#x25B6 </b> Twelve Labs</span>
             </div>
 
