--- a/index.html
+++ b/index.html
@@ -116,19 +116,19 @@
             <h1 class="title is-1 publication-title">HarmonyView: Harmonizing Consistency and Diversity in One-Image-to-3D</h1>
             <div class="is-size-4 publication-authors">
               <span class="author-block">
-                <a href="https://byeongjun-park.github.io/"><b style="color:#f68946; font-weight:normal">Byeongjun Park <sup>*</sup>,</b></a>
+                <a href="https://byeongjun-park.github.io/" style="color:#f68946; font-weight:normal">Byeongjun Park <sup>*</sup>,</a>
               </span>
               <span class="author-block">
-                <a href="https://sangminwoo.github.io/"><b style="color:#f68946; font-weight:normal">Sangmin Woo <sup>*</sup>,</b></a>
+                <a href="https://sangminwoo.github.io/" style="color:#f68946; font-weight:normal">Sangmin Woo <sup>*</sup>,</a>
               </span>
               <span class="author-block">
-                <b style="color:#008AD7; font-weight:normal">Hyojun Go<sup>*</sup>,</b>
+                <a style="color:#008AD7; font-weight:normal">Hyojun Go<sup>*</sup>,</a>
               </span>
               <span class="author-block">
-                <b style="color:#008AD7; font-weight:normal">Jin-Young Kim<sup>*</sup>,</b>
+                <a style="color:#008AD7; font-weight:normal">Jin-Young Kim<sup>*</sup>,</a>
               </span>
               <span class="author-block">
-                <b style="color:#f68946; font-weight:normal">Changick Kim<sup>&#8224;</sup></b>
+                <a style="color:#f68946; font-weight:normal">Changick Kim<sup>&#8224;</sup></a>
               </span>
             </div>
 
