--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
                 <a href="https://sangminwoo.github.io/" style="color:#f68946; font-weight:normal">Sangmin Woo <sup>*</sup>,</a>
               </span>
               <span class="author-block">
-                <a style="color:#008AD7; font-weight:normal">Hyojun Go<sup>*</sup>,</a>
+                <a style="color:#008AD7; font-weight:normal">Hyojun Go,</a>
               </span>
               <span class="author-block">
-                <a style="color:#008AD7; font-weight:normal">Jin-Young Kim<sup>*</sup>,</a>
+                <a style="color:#008AD7; font-weight:normal">Jin-Young Kim,</a>
               </span>
               <span class="author-block">
                 <a style="color:#f68946; font-weight:normal">Changick Kim<sup>&#8224;</sup></a>
