--- a/index.html
+++ b/index.html
@@ -122,13 +122,13 @@
                 <a href="https://byeongjun-park.github.io/" style="color:#f68946; font-weight:normal">Byeongjun Park <sup>*</sup>,</a>
               </span>
               <span class="author-block">
-                <a style="color:#008AD7; font-weight:normal">Hyojun Go,</a>
+                <b style="color:#008AD7; font-weight:normal">Hyojun Go,</b>
               </span>
               <span class="author-block">
-                <a style="color:#008AD7; font-weight:normal">Jin-Young Kim,</a>
+                <b style="color:#008AD7; font-weight:normal">Jin-Young Kim,</b>
               </span>
               <span class="author-block">
-                <a style="color:#f68946; font-weight:normal">Changick Kim<sup>&#8224;</sup></a>
+                <b style="color:#f68946; font-weight:normal">Changick Kim<sup>&#8224;</sup></b>
               </span>
             </div>
 
