--- a/index.html
+++ b/index.html
@@ -164,12 +164,12 @@
                   </a>
                 </span>
                 <span class="link-block">
-                  <a href="https://llava.hliu.cc" target="_blank"
+                  <a href="https://huggingface.co/spaces/byeongjun-park/HarmonyView" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="far fa-images"></i>
                     </span>
-                    <span>Demo</span>
+                    <span>Live Demo</span>
                   </a>
                 </span>
               </div>
