--- a/index.html
+++ b/index.html
@@ -184,11 +184,7 @@
     <div class="container is-max-desktop">
       <div class="hero-body">
         <h4 class="subtitle has-text-centered">
-          🔥<span style="color: #ff3860">[NEW!]</span> LLaVA-1.5 achieves SoTA on 11 benchmarks, with just simple modifications to the original LLaVA, utilizes all public data, completes training in ~1 day on a single 8-A100 node, and surpasses methods that use billion-scale data.
-          <br><br>
-          LLaVA represents a novel end-to-end trained large multimodal model that combines a vision encoder and Vicuna
-          for general-purpose visual and language understanding,
-          achieving impressive chat capabilities mimicking spirits of the multimodal GPT-4 and setting a new state-of-the-art accuracy on Science QA.
+          🔥<span style="color: #ff3860">[NEW!]</span> HarmonyView is a simple yet effective diffusion sampling technique adept at decomposing two intricate aspects in single-image 3D generation: consistency and diversity.
         </h4>
       </div>
     </div>
@@ -196,7 +192,7 @@
 
   <section class="section"  style="background-color:#efeff081">
     <div class="container is-max-desktop" id="gradio">
-      <gradio-app src="https://llava.hliu.cc"></gradio-app>
+      <gradio-app src="https://huggingface.co/spaces/byeongjun-park/HarmonyView"></gradio-app>
     </div>
   </section>
 
