--- a/index.html
+++ b/index.html
@@ -200,9 +200,8 @@
             <p>
               Recent progress in single-image 3D generation highlights the importance of multi-view coherency, leveraging 3D priors from large-scale diffusion models pretrained on Internet-scale images. However, the aspect of novel-view diversity remains underexplored within the research landscape due to the ambiguity in converting a 2D image into 3D content, where numerous potential shapes can emerge. Here, we aim to address this research gap by simultaneously addressing both consistency and diversity.
               <ol type="1">
-                <li><b>Consistency</b>. <span style="font-size: 95%;">We present the first attempt to use <a href="https://openai.com/research/gpt-4">language-only GPT-4</a> to generate multimodal language-image instruction-following data. </span></li>
-                <li><b>Diversity</b>. <span style="font-size: 95%;">We introduce <it><b>LLaVA</b> (<b>L</b>arge <b>L</b>anguage-<b>a</b>nd-<b>V</b>ision <b>A</b>ssistant)</it>, an end-to-end trained large multimodal model that connects a vision encoder and LLM for general-purpose visual and language understanding.</li>
-                <li><b>Consistency-Diversity (CD) Score</b>. <span style="font-size: 95%;">We make GPT-4 generated visual instruction tuning data, our model and code base publicly available.</li>
+                <li><b>New diffusion sampling strategy</b>. <span style="font-size: 95%;">We present the first attempt in diffusion sampling for multi-view diffusion model, demonstarating a win-win scenario in both consistency and diversity. </span></li>
+                <li><b>Consistency-Diversity (CD) Score</b>. <span style="font-size: 95%;">We introduce a novel reference-free evaluation metric to assess the consistency-diversity based on both the CLIP image and text encoders.</li>
               </ol>
            </p>
   
