--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             <p>
               Recent progress in single-image 3D generation highlights the importance of multi-view coherency, leveraging 3D priors from large-scale diffusion models pretrained on Internet-scale images. However, the aspect of novel-view diversity remains underexplored within the research landscape due to the ambiguity in converting a 2D image into 3D content, where numerous potential shapes can emerge. Here, we aim to address this research gap by simultaneously addressing both consistency and diversity.
               <ol type="1">
-                <li><b>New diffusion sampling strategy</b>. <span style="font-size: 95%;">We present a novel diffusion sampling technique for multi-view diffusion model, demonstrating a win-win scenario in both consistency and diversity. </span></li>
+                <li><b>HarmonyView</b>. <span style="font-size: 95%;">We present a novel diffusion sampling technique for multi-view diffusion model, demonstrating a win-win scenario in both consistency and diversity. </span></li>
                 <li><b>Consistency-Diversity (CD) Score</b>. <span style="font-size: 95%;">We introduce a novel reference-free evaluation metric to assess the consistency-diversity based on both the CLIP image and text encoders. </span></li>
               </ol>
            </p>
