--- a/index.html
+++ b/index.html
@@ -204,8 +204,10 @@
                 <li><b>Consistency-Diversity (CD) Score</b>. <span style="font-size: 95%;">We introduce a novel reference-free evaluation metric to assess the consistency-diversity based on both the CLIP image and text encoders. </span></li>
               </ol>
            </p>
-  
           </div>
+          <figure style="text-align: center;">
+          <img id="teaser" width="100%" src="images/teaser.png">
+          </figure>
         </div>
       </div>
         
