--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     <span class="icon">
                       <i class="far fa-images"></i>
                     </span>
-                    <span>Live Demo</span>
+                    <span>Live Demo (Comming Soon)</span>
                   </a>
                 </span>
               </div>
@@ -223,6 +223,15 @@
       <h2 class="title is-3"><img id="painting_icon" width="3%" src="https://cdn-icons-png.flaticon.com/512/5886/5886212.png"> Multimodal Instrucion-Following Data</h2>
     </div>
   </div>
+
+  <!-- 3d model viewer -->
+  <p class="title is-3 mt-5 has-text-centered"> Exported Meshes </p>
+  <div class="level">
+    <div class="level-item">
+      <model-viewer src="meshes/anya.glb" poster="meshes/anya.jpg" style="width: 100%; height: 300px;" auto-rotate shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
+    </div>
+  </div>
+
   </section>
  
 
