--- a/index.html
+++ b/index.html
@@ -220,8 +220,11 @@
   <!-- Results. -->
   <div class="columns is-centered has-text-centered">
     <div class="column is-six-fifths">
-      <h2 class="title is-3"><img id="painting_icon" width="3%" src="https://cdn-icons-png.flaticon.com/512/5886/5886212.png"> Multimodal Instrucion-Following Data</h2>
+      <h2 class="title is-3"><img id="painting_icon" width="3%" src="https://cdn-icons-png.flaticon.com/512/5886/5886212.png"> Harmonizing consistency and diversity</h2>
     </div>
+    <p>
+      $$ &#8764;&#949;(\mathcal{x}_t) $$
+    </p>
   </div>
 
   <!-- 3d model viewer -->
