--- a/index.html
+++ b/index.html
@@ -223,7 +223,40 @@
       <h2 class="title is-3"><img id="painting_icon" width="3%" src="https://cdn-icons-png.flaticon.com/512/5886/5886212.png"> Harmonizing consistency and diversity</h2>
     </div>
     <p>
-      $$ &#8764;&#949;(\mathcal{x}_t) $$
+    <math xmlns="http://www.w3.org/1998/Math/MathML">
+      <munder>
+        <mo>&#x2211;</mo>
+        <mrow>
+          <mi>i</mi>
+          <mo>=</mo>
+          <mn>1</mn>
+        </mrow>
+      </munder>
+      <msub>
+        <mrow>
+          <mo>&#x2112;</mo>
+        </mrow>
+        <mrow>
+          <mrow>
+            <mo>c</mo>
+            <mi>l</mi>
+            <mi>u</mi>
+            <mi>s</mi>
+            <mi>t</mi>
+            <mi>e</mi>
+            <mi>r</mi>
+          </mrow>
+        </mrow>
+      </msub>
+      <mo>&#x0028;</mo>
+      <mi>I</mi>
+      <sub>
+        <mi>i</mi>
+      </sub>
+      <mo>&#x2229;</mo>
+      <mi>&#x2115;</mi>
+      <mo>&#x0029;</mo>
+    </math>
     </p>
   </div>
 
