--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
   <p class="title is-3 mt-5 has-text-centered"> Exported Meshes </p>
   <div class="level">
     <div class="level-item">
-      <model-viewer src="meshes/anya.glb" poster="meshes/anya.jpg" style="width: 100%; height: 300px;" auto-rotate shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
+      <model-viewer src="assets/backpack/mesh.ply" poster="assets/backpack/input.png" style="width: 100%; height: 300px;" auto-rotate shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
     </div>
   </div>
   </section>
