Revert "code release"
This reverts commit da61e0ece2080ca7ba39747c9eebfa1f28e2c8c6.

--- a/index.html
+++ b/index.html
@@ -225,11 +225,10 @@
 
   <!-- 3d model viewer -->
   <p class="title is-3 mt-5 has-text-centered"> Exported Meshes </p>
-  <video muted autoplay loop> <source src="assets/backpack/rendering.mp4" type="video/mp4"> </video>
-  <video muted autoplay loop> <source src="assets/bird/rendering.mp4" type="video/mp4"> </video>
-  <div class="container is-max-desktop content">
-    <img id="img-to-3d" src="assets/backpack/input.png">
-    <img id="img-to-3d" src="assets/bird/input.png">
+  <div class="level">
+    <div class="level-item">
+      <model-viewer src="assets/backpack/mesh.glb" poster="assets/backpack/input.png" style="width: 100%; height: 300px;" auto-rotate shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
+    </div>
   </div>
   </section>
  
