--- a/index.html
+++ b/index.html
@@ -227,7 +227,10 @@
   <p class="title is-3 mt-5 has-text-centered"> Exported Meshes </p>
   <div class="level">
     <div class="level-item">
-      <model-viewer src="assets/backpack/mesh.glb" poster="assets/backpack/input.png" style="width: 100%; height: 300px;" auto-rotate shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
+      <img src="assets/backpack/input.png">
+      <img src="assets/bird/input.png">
+      <video muted autoplay controls loop> <source src="assets/backpack/rendering.mp4" type="video/mp4"> </video>
+      <video muted autoplay controls loop> <source src="assets/bird/rendering.mp4" type="video/mp4"> </video>
     </div>
   </div>
   </section>
