--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
-                    <span>Code (Comming Soon)</span>
+                    <span>Code</span>
                   </a>
                 </span>
                 <span class="link-block">
