--- a/index.html
+++ b/index.html
@@ -225,13 +225,11 @@
 
   <!-- 3d model viewer -->
   <p class="title is-3 mt-5 has-text-centered"> Exported Meshes </p>
-  <div class="level">
-    <div class="level-item">
-      <img src="assets/backpack/input.png">
-      <img src="assets/bird/input.png">
-      <video muted autoplay controls loop> <source src="assets/backpack/rendering.mp4" type="video/mp4"> </video>
-      <video muted autoplay controls loop> <source src="assets/bird/rendering.mp4" type="video/mp4"> </video>
-    </div>
+  <div class="content">
+    <img src="assets/backpack/input.png">
+    <img src="assets/bird/input.png">
+    <video muted autoplay controls loop> <source src="assets/backpack/rendering.mp4" type="video/mp4"> </video>
+    <video muted autoplay controls loop> <source src="assets/bird/rendering.mp4" type="video/mp4"> </video>
   </div>
   </section>
  
