--- a/index.html
+++ b/index.html
@@ -228,6 +228,8 @@
   <div class="content">
     <video muted autoplay controls loop> <source src="assets/backpack/rendering.mp4" type="video/mp4"> </video>
     <video muted autoplay controls loop> <source src="assets/bird/rendering.mp4" type="video/mp4"> </video>
+    <video muted autoplay controls loop> <source src="assets/dragon/rendering.mp4" type="video/mp4"> </video>
+    <video muted autoplay controls loop> <source src="assets/drum_kids/rendering.mp4" type="video/mp4"> </video>
   </div>
   </section>
  
