--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
   <!-- 3d model viewer -->
   <p class="title is-3 mt-5 has-text-centered"> Exported Meshes </p>
-  <div class="content">
+  <div class="columns is-centered has-text-centered">
     <video muted autoplay controls loop> <source src="assets/backpack/rendering.mp4" type="video/mp4"> </video>
     <video muted autoplay controls loop> <source src="assets/bird/rendering.mp4" type="video/mp4"> </video>
     <video muted autoplay controls loop> <source src="assets/dragon/rendering.mp4" type="video/mp4"> </video>
