--- a/index.html
+++ b/index.html
@@ -230,6 +230,9 @@
     <video muted autoplay controls loop> <source src="assets/bird/rendering.mp4" type="video/mp4"> </video>
     <video muted autoplay controls loop> <source src="assets/dragon/rendering.mp4" type="video/mp4"> </video>
     <video muted autoplay controls loop> <source src="assets/drum_kids/rendering.mp4" type="video/mp4"> </video>
+    <video muted autoplay controls loop> <source src="assets/drums/rendering.mp4" type="video/mp4"> </video>
+    <video muted autoplay controls loop> <source src="assets/furnitures/rendering.mp4" type="video/mp4"> </video>
+    <video muted autoplay controls loop> <source src="assets/panda_back/rendering.mp4" type="video/mp4"> </video>
   </div>
   </section>
  
