--- a/index.html
+++ b/index.html
@@ -226,13 +226,13 @@
   <!-- 3d model viewer -->
   <p class="title is-3 mt-5 has-text-centered"> Exported Meshes </p>
   <div class="columns is-centered has-text-centered">
-    <video muted autoplay controls loop> <source src="assets/backpack/rendering.mp4" type="video/mp4"> </video>
-    <video muted autoplay controls loop> <source src="assets/bird/rendering.mp4" type="video/mp4"> </video>
-    <video muted autoplay controls loop> <source src="assets/dragon/rendering.mp4" type="video/mp4"> </video>
-    <video muted autoplay controls loop> <source src="assets/drum_kids/rendering.mp4" type="video/mp4"> </video>
-    <video muted autoplay controls loop> <source src="assets/drums/rendering.mp4" type="video/mp4"> </video>
-    <video muted autoplay controls loop> <source src="assets/furnitures/rendering.mp4" type="video/mp4"> </video>
-    <video muted autoplay controls loop> <source src="assets/panda_back/rendering.mp4" type="video/mp4"> </video>
+    <video muted autoplay controls loop height="100%"> <source src="assets/backpack/rendering.mp4" type="video/mp4"> </video>
+    <video muted autoplay controls loop height="100%"> <source src="assets/bird/rendering.mp4" type="video/mp4"> </video>
+    <video muted autoplay controls loop height="100%"> <source src="assets/dragon/rendering.mp4" type="video/mp4"> </video>
+    <video muted autoplay controls loop height="100%"> <source src="assets/drum_kids/rendering.mp4" type="video/mp4"> </video>
+    <video muted autoplay controls loop height="100%"> <source src="assets/drums/rendering.mp4" type="video/mp4"> </video>
+    <video muted autoplay controls loop height="100%"> <source src="assets/furnitures/rendering.mp4" type="video/mp4"> </video>
+    <video muted autoplay controls loop height="100%"> <source src="assets/panda_back/rendering.mp4" type="video/mp4"> </video>
   </div>
   </section>
  
