--- a/index.html
+++ b/index.html
@@ -219,20 +219,19 @@
   <!-- Results. -->
   <div class="columns is-centered has-text-centered">
     <div class="column is-six-fifths">
-      <h2 class="title is-3"><img id="painting_icon" width="3%" src="https://cdn-icons-png.flaticon.com/512/5886/5886212.png"> Harmonizing consistency and diversity</h2>
+      <h2 class="title is-3"><img id="painting_icon" width="3%" src="https://cdn-icons-png.flaticon.com/512/5886/5886212.png"> Image-to-3D</h2>
      </div>
   </div>
 
   <!-- 3d model viewer -->
-  <p class="title is-3 mt-5 has-text-centered"> Exported Meshes </p>
   <div class="columns is-centered has-text-centered">
-    <img src="assets/backpack/rendering.mp4">
-    <img src="assets/bird/rendering.mp4">
-    <img src="assets/dragon/rendering.mp4">
-    <img src="assets/drum_kids/rendering.mp4">
-    <img src="assets/drums/rendering.mp4">
-    <img src="assets/furnitures/rendering.mp4">
-    <img src="assets/panda_back/rendering.mp4">
+    <img src="assets/backpack/input.png">
+    <img src="assets/bird/input.png">
+    <img src="assets/dragon/input.png">
+    <img src="assets/drum_kids/input.png">
+    <img src="assets/drums/input.png">
+    <img src="assets/furnitures/input.png">
+    <img src="assets/panda_back/input.png">
   </div>
   <div class="columns is-centered has-text-centered">
     <video muted autoplay controls loop height="100%"> <source src="assets/backpack/rendering.mp4" type="video/mp4"> </video>
