--- a/index.html
+++ b/index.html
@@ -225,13 +225,13 @@
 
   <!-- 3d model viewer -->
   <div class="columns is-centered has-text-centered">
-    <img src="assets/backpack/input.png">
-    <img src="assets/bird/input.png">
-    <img src="assets/dragon/input.png">
-    <img src="assets/drum_kids/input.png">
-    <img src="assets/drums/input.png">
-    <img src="assets/furnitures/input.png">
-    <img src="assets/panda_back/input.png">
+    <img src="assets/backpack/input.png" width="50%">
+    <img src="assets/bird/input.png" width="50%">
+    <img src="assets/dragon/input.png" width="50%">
+    <img src="assets/drum_kids/input.png" width="50%">
+    <img src="assets/drums/input.png" width="50%">
+    <img src="assets/furnitures/input.png" width="50%">
+    <img src="assets/panda_back/input.png" width="50%">
   </div>
   <div class="columns is-centered has-text-centered">
     <video muted autoplay controls loop height="100%"> <source src="assets/backpack/rendering.mp4" type="video/mp4"> </video>
