--- a/index.html
+++ b/index.html
@@ -224,28 +224,16 @@
   </div>
 
   <!-- 3d model viewer -->
-  <div class="columns is-centered has-text-centered">
+  <div class="container is-max-desktop">
     <img src="assets/backpack/input.png">
-  </div>
-  <div class="columns is-centered has-text-centered">
     <img src="assets/bird/input.png">
-  </div>
-  <div class="columns is-centered has-text-centered">
     <img src="assets/dragon/input.png">
-  </div>
-  <div class="columns is-centered has-text-centered">
     <img src="assets/drum_kids/input.png">
-  </div>
-  <div class="columns is-centered has-text-centered">
     <img src="assets/drums/input.png">
-  </div>
-  <div class="columns is-centered has-text-centered">
     <img src="assets/furnitures/input.png">
-  </div>
-  <div class="columns is-centered has-text-centered">
     <img src="assets/panda_back/input.png">
   </div>
-  <div class="columns is-centered has-text-centered">
+  <div class="container is-max-desktop">
     <video muted autoplay controls loop height="100%"> <source src="assets/backpack/rendering.mp4" type="video/mp4"> </video>
     <video muted autoplay controls loop height="100%"> <source src="assets/bird/rendering.mp4" type="video/mp4"> </video>
     <video muted autoplay controls loop height="100%"> <source src="assets/dragon/rendering.mp4" type="video/mp4"> </video>
