--- a/index.html
+++ b/index.html
@@ -225,22 +225,22 @@
 
   <!-- 3d model viewer -->
   <div class="container is-max-desktop">
-    <img src="assets/backpack/input.png">
-    <img src="assets/bird/input.png">
-    <img src="assets/dragon/input.png">
-    <img src="assets/drum_kids/input.png">
-    <img src="assets/drums/input.png">
-    <img src="assets/furnitures/input.png">
-    <img src="assets/panda_back/input.png">
+    <img src="assets/backpack/input.png" width="25%">
+    <img src="assets/bird/input.png" width="25%">
+    <img src="assets/dragon/input.png" width="25%">
+    <img src="assets/drum_kids/input.png" width="25%">
+    <img src="assets/drums/input.png" width="25%">
+    <img src="assets/furnitures/input.png" width="25%">
+    <img src="assets/panda_back/input.png" width="25%">
   </div>
   <div class="container is-max-desktop">
-    <video muted autoplay controls loop height="100%"> <source src="assets/backpack/rendering.mp4" type="video/mp4"> </video>
-    <video muted autoplay controls loop height="100%"> <source src="assets/bird/rendering.mp4" type="video/mp4"> </video>
-    <video muted autoplay controls loop height="100%"> <source src="assets/dragon/rendering.mp4" type="video/mp4"> </video>
-    <video muted autoplay controls loop height="100%"> <source src="assets/drum_kids/rendering.mp4" type="video/mp4"> </video>
-    <video muted autoplay controls loop height="100%"> <source src="assets/drums/rendering.mp4" type="video/mp4"> </video>
-    <video muted autoplay controls loop height="100%"> <source src="assets/furnitures/rendering.mp4" type="video/mp4"> </video>
-    <video muted autoplay controls loop height="100%"> <source src="assets/panda_back/rendering.mp4" type="video/mp4"> </video>
+    <video muted autoplay controls loop width="25%"> <source src="assets/backpack/rendering.mp4" type="video/mp4"> </video>
+    <video muted autoplay controls loop width="25%"> <source src="assets/bird/rendering.mp4" type="video/mp4"> </video>
+    <video muted autoplay controls loop width="25%"> <source src="assets/dragon/rendering.mp4" type="video/mp4"> </video>
+    <video muted autoplay controls loop width="25%"> <source src="assets/drum_kids/rendering.mp4" type="video/mp4"> </video>
+    <video muted autoplay controls loop width="25%"> <source src="assets/drums/rendering.mp4" type="video/mp4"> </video>
+    <video muted autoplay controls loop width="25%"> <source src="assets/furnitures/rendering.mp4" type="video/mp4"> </video>
+    <video muted autoplay controls loop width="25%"> <source src="assets/panda_back/rendering.mp4" type="video/mp4"> </video>
   </div>
   </section>
  
