--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@
     <img src="assets/drums/input.png" width="25%">
     <img src="assets/furnitures/input.png" width="25%">
     <img src="assets/panda_back/input.png" width="25%">
+    <img src="assets/table/input.png" width="25%">
   </div>
   <div class="container is-max-desktop">
     <video muted autoplay controls loop width="25%"> <source src="assets/backpack/rendering.mp4" type="video/mp4"> </video>
@@ -241,6 +242,7 @@
     <video muted autoplay controls loop width="25%"> <source src="assets/drums/rendering.mp4" type="video/mp4"> </video>
     <video muted autoplay controls loop width="25%"> <source src="assets/furnitures/rendering.mp4" type="video/mp4"> </video>
     <video muted autoplay controls loop width="25%"> <source src="assets/panda_back/rendering.mp4" type="video/mp4"> </video>
+    <video muted autoplay controls loop width="25%"> <source src="assets/table/rendering.mp4" type="video/mp4"> </video>
   </div>
   </section>
  
